fix spacing on job posing view

--- a/src/scenes/job-postings/view/theme.css
+++ b/src/scenes/job-postings/view/theme.css
@@ -9,6 +9,8 @@
 }
 
 .job {
+  margin-bottom: 4em;
+
   > * {
     position: relative;
     margin-bottom: 1.8em;
